force-app/main/default/objects/OA_Budget__c/OA_Budget__c.object-meta.xml
<CustomObject>
    <label>Budget</label>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>