force-app/main/default/objects/OA_Budget__c/fields/OA_Account__c.field-meta.xml
<CustomField>
    <fullName>OA_Account__c</fullName>
    <label>Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>