force-app/main/default/objects/OA_Budget__c/fields/OA_CSO__c.field-meta.xml
<CustomField>
    <fullName>OA_CSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget</relationshipName>
    <type>Lookup</type>
</CustomField>