force-app/main/default/objects/OA_Budget__c/fields/OA_Region__c.field-meta.xml
<CustomField>
    <fullName>OA_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East NA</fullName>
            </value>
            <value>
                <fullName>West NA</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>APAC &amp; MEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>