force-app/main/default/objects/OA_Budget__c/fields/OA_Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>OA_Total_Budget__c</fullName>
    <label>Total Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>