force-app/main/default/objects/OA_Budget__c/fields/OA_Year__c.field-meta.xml
<CustomField>
    <fullName>OA_Year__c</fullName>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year</valueSetName>
    </valueSet>
</CustomField>