force-app/main/default/objects/OA_Budget__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <formula>TEXT(OA_Year__c)+TEXT(OA_Region__c)+OA_Account__c+ OA_CSO__r.FirstName+&#39; &#39;+ OA_CSO__r.LastName</formula>
    <label>Unique Key</label>
    <type>Text</type>
</CustomField>