force-app/main/default/objects/OA_Budget__c/listViews/Budget2019.listView-meta.xml
<ListView>
    <fullName>Budget2019</fullName>
    <columns>NAME</columns>
    <columns>OA_Account__c</columns>
    <columns>OA_CSO__c</columns>
    <columns>OA_Region__c</columns>
    <columns>OA_Year__c</columns>
    <columns>OA_Total_Budget__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OA_Year__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </filters>
    <label>2019 Budget</label>
</ListView>